# insurance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.python  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  log_config.yaml  pyproject.toml
.github/workflows/: ci.yml  dependency-currency.yml  publish-images.yml
agent/: README.md  pyproject.toml
agent/src/agent/: config.py  db.py  discriminators.py  economy.py  expl_cache.py  graph.py  llm.py  main.py  mcp_client.py  nodes.py  parsing.py  prompts.py  retention.py  state.py  usage.py  verifier.py  verify.py
agent/tests/: test_catalog_cache.py  test_chat_endpoint.py  test_config.py  test_discriminators.py  test_economy.py  test_expl_cache.py  test_graph_flow.py  test_health.py  test_ingest_skip.py  test_llm.py  test_no_match_diagnosis.py  test_parsing.py  test_retention.py  test_seed_demo_catalog.py  test_usage.py  test_verifier.py  test_verify.py
api/: README.md  pyproject.toml
api/src/api/: main.py
api/tests/: test_gateway_proxy.py  test_health.py  test_rate_limit.py
db/: alembic.ini  pyproject.toml  seed.py  seed_data.yaml
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 0001_schemas_and_pgvector.py  0002_catalog_tables.py  0003_source_documents_insurer_optional.py  0004_app_sessions.py  0005_extraction_run_queue.py  0006_extraction_run_correction_attempts.py  0007_explanation_cache.py  0008_llm_usage.py
deploy/: .env.example  docker-compose.yml  push-images.sh
docs/: 00-overview.md  01-architecture.md  02-ingestion-mcp.md  03-agent-design.md  04-pwa-ux.md  05-roadmap.md  06-scaling.md  agent-graph.drawio  architecture.drawio  ingestion-pipeline.drawio
harness/: README.md  background-jobs.md  code-design.md  deploy-gotchas.md  diagrams-drawio.md  docs-in-sync.md  git-commits.md  testing-verification.md
ingestion/: README.md  pyproject.toml
ingestion/src/ingestion/: admin.html  correction.py  extraction.py  intake.py  main.py  models.py  parsing.py  preview.py  prompts.py  repository.py  vision.py  worker.py
ingestion/tests/: test_admin_auth.py  test_correction.py  test_extraction.py  test_health.py  test_models.py  test_pipeline.py  test_public_brochure.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_server/: db.py  embeddings.py  main.py  queries.py
mcp-server/tests/: test_compare.py  test_health.py  test_mcp_protocol.py
pwa/: Dockerfile.prod  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
pwa/public/: config.js
pwa/src/: App.tsx  api.ts  app.css  build-id.d.ts
pwa/src/components/: BrochurePanel.tsx  Chat.tsx  Intake.tsx  ResetButton.tsx  Results.tsx  icons.tsx
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py  catalog.py  embeddings.py  needs.py
shared/tests/: test_catalog_models.py  test_needs.py
