[project]
name = "insurance-agent"
version = "0.1.0"
description = "LangGraph recommendation agent"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "langgraph>=1.2",
    "langgraph-checkpoint-postgres>=3.1",
    "langchain>=1.3",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.3",
    "mcp>=1.28",
    "psycopg[binary]>=3.2",
    "insurance-shared",
]

[tool.uv.sources]
insurance-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
