[project]
name = "insurance-api"
version = "0.1.0"
description = "API gateway: sessions, SSE streaming, rate limiting"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "httpx>=0.27",
    "insurance-shared",
]

[tool.uv.sources]
insurance-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
