[project]
name = "insurance-ingestion"
version = "0.1.0"
description = "Policy ingestion pipeline + upload portal (built out in Phase 4)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "python-multipart>=0.0.9",
    "pypdf>=6.0",
    "docling>=2.100",
    # Direct dep so the CPU-only torch pin in the root pyproject takes effect
    # (docling pulls torch transitively; the default Linux wheel drags in CUDA).
    "torch>=2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "langchain>=1.3",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.3",
    "insurance-shared",
]

[tool.uv.sources]
insurance-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
