[project]
name = "insurance-ingestion"
version = "0.1.0"
description = "Policy ingestion pipeline + upload portal (built out in Phase 4)"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "python-multipart>=0.0.9",
    "pypdf>=6.0",
    "docling>=2.100",
    # Direct deps so the CPU-only pins in the root pyproject take effect (docling
    # pulls both transitively; the default Linux wheels drag in CUDA, and a
    # CUDA-built torchvision can't register its ops against +cpu torch).
    "torch>=2",
    "torchvision>=0.28",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "langchain>=1.3",
    "langchain-anthropic>=1.4",
    "langchain-openai>=1.3",
    "insurance-shared",
]

[tool.uv.sources]
insurance-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
