[project]
name = "insurance-mcp-server"
version = "0.1.0"
description = "Read-only MCP server over the policy catalog (tools land in Phase 1)"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.28",
    "uvicorn[standard]>=0.51",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "insurance-shared",
]

[tool.uv.sources]
insurance-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
