[project]
name = "insurance-shared"
version = "0.1.0"
description = "Shared models: policy schema, NeedsProfile, field-priority tables"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
